data/contextbench_phase1/stripped/raw_transcripts/000275_ecfb4380.txt
STRIPPED RAW CLAUDE CODE TRAJECTORY
This transcript was rendered from original raw JSONL using the canonical ADP strip manifest.

[RAW line 2 USER]
PRIOR ISSUE METADATA
repo: pallets/flask
instance_id: pallets__flask-4045
base_commit: d8c37f43724cd9fb0870f77877b7c4c7e38a19e0
problem_statement:
Raise error when blueprint name contains a dot
This is required since every dot is now significant since blueprints can be nested. An error was already added for endpoint names in 1.0, but should have been added for this as well.
[RAW line 6 TOOL Bash]
find ./swebench_9_15/testbed -type f -name "*.py" | grep -i blueprint | head -20
[RAW line 8 TOOL Glob]
{
  "pattern": "**/*blueprint*.py"
}
[RAW line 11 TOOL Glob]
{
  "pattern": "**/*.py"
}
[RAW line 12 TOOL RESULT toolu_01DSHpQwTKSVASEjQTDqov99]
./swebench_9_15/calculate_session_usage.py
[RAW line 28 TOOL Glob]
{
  "pattern": "testbed/src/flask/*blueprint*.py"
}
[RAW line 29 TOOL RESULT toolu_01DNdERM54NRqhg11XecCCdy]
./swebench_9_15/testbed/src/flask/blueprints.py
[RAW line 30 TOOL Read]
{
  "file_path": "./swebench_9_15/testbed/src/flask/blueprints.py"
}
[RAW line 31 TOOL RESULT toolu_014tZYnFoxZUn57t3fYdGHEK]
     1→import typing as t
     2→from collections import defaultdict
     3→from functools import update_wrapper
     4→
     5→from .scaffold import _endpoint_from_view_func
     6→from .scaffold import _sentinel
     7→from .scaffold import Scaffold
     8→from .typing import AfterRequestCallable
     9→from .typing import BeforeRequestCallable
    10→from .typing import ErrorHandlerCallable
    11→from .typing import TeardownCallable
    12→from .typing import TemplateContextProcessorCallable
    13→from .typing import TemplateFilterCallable
    14→from .typing import TemplateGlobalCallable
    15→from .typing import TemplateTestCallable
    16→from .typing import URLDefaultCallable
    17→from .typing import URLValuePreprocessorCallable
    18→
    19→if t.TYPE_CHECKING:
    20→    from .app import Flask
    21→
    22→DeferredSetupFunction = t.Callable[["BlueprintSetupState"], t.Callable]
    23→
    24→
    25→class BlueprintSetupState:
    26→    """Temporary holder object for registering a blueprint with the
    27→    application.  An instance of this class is created by the
    28→    :meth:`~flask.Blueprint.make_setup_state` method and later passed
    29→    to all register callback functions.
    30→    """
    31→
    32→    def __init__(
    33→        self,
    34→        blueprint: "Blueprint",
    35→        app: "Flask",
    36→        options: t.Any,
    37→        first_registration: bool,
    38→    ) -> None:
    39→        #: a reference to the current application
    40→        self.app = app
    41→
    42→        #: a reference to the blueprint that created this setup state.
    43→        self.blueprint = blueprint
    44→
    45→        #: a dictionary with all options that were passed to the
    46→        #: :meth:`~flask.Flask.register_blueprint` method.
    47→        self.options = options
    48→
    49→        #: as blueprints can be registered multiple times with the
    50→        #: application and not everything wants to be re
[... truncated ...]
[RAW line 36 TOOL Edit]
{
  "file_path": "./swebench_9_15/testbed/src/flask/blueprints.py",
  "new_text_sha256": "aca49969cb8eaafcddad605b6dee6a0bebc0691eea3d88c070736a75f24a9242",
  "old_text_sha256": "52d9984887afef9393611d9cb02a1a9cd6dc20d68ba55c5421fe7ae6bff0a712"
}
[RAW line 46 TOOL Bash]
python test_issue.py
[RAW line 47 TOOL RESULT toolu_01XsbLuRu2agwwHhmpMyqrYR]
Exit code 1
  File "test_issue.py", line 13
    print(f"PASS: Got expected ValueError: {e}")
                                              ^
SyntaxError: invalid syntax
[RAW line 51 TOOL Bash]
python test_issue.py
[RAW line 52 TOOL RESULT toolu_01Qca2U7CEsT8aJ2NHAeDLpY]
Exit code 1
Traceback (most recent call last):
  File "test_issue.py", line 5, in <module>
    from flask import Blueprint
  File "./swebench_9_15/testbed/src/flask/__init__.py", line 1, in <module>
    from markupsafe import escape
ImportError: No module named markupsafe
[RAW line 53 TOOL Bash]
cd testbed && python -c "from flask import Blueprint; bp = Blueprint('admin.users', __name__)"
[RAW line 54 TOOL RESULT toolu_01S8SsXRwkqGhV5onXxnKymp]
Exit code 1
Traceback (most recent call last):
  File "<string>", line 1, in <module>
ImportError: No module named flask
[RAW line 55 TOOL Bash]
cd testbed && python -m pytest tests/test_blueprints.py -v -k "test" 2>&1 | head -50
[RAW line 56 TOOL RESULT toolu_01GY9kkSgq9DQam55AovQx4e]
/Applications/ADFRsuite-1.0/bin/python: No module named pytest
[RAW line 58 TOOL Bash]
cd testbed && python3 -c "
import sys
sys.path.insert(0, 'src')
from flask import Blueprint

# Test 1: Blueprint with dot should raise ValueError
try:
    bp = Blueprint('admin.users', __name__)
    print('FAIL: Expected ValueError')
    sys.exit(1)
except ValueError as e:
    print('PASS: Got expected ValueError -', str(e))

# Test 2: Blueprint without dot should work
try:
    bp = Blueprint('admin_users', __name__)
    print('PASS: Valid blueprint name works')
except Exception as e:
    print('FAIL: Unexpected error -', str(e))
    sys.exit(1)

print('All tests passed!')
"
[RAW line 60 TOOL Bash]
python3 -c "
import sys
sys.path.insert(0, 'testbed/src')
from flask import Blueprint

# Test 1: Blueprint with dot should raise ValueError
try:
    bp = Blueprint('admin.users', __name__)
    print('FAIL: Expected ValueError')
    sys.exit(1)
except ValueError as e:
    print('PASS: Got expected ValueError -', str(e))

# Test 2: Blueprint without dot should work
try:
    bp = Blueprint('admin_users', __name__)
    print('PASS: Valid blueprint name works')
except Exception as e:
    print('FAIL: Unexpected error -', str(e))
    sys.exit(1)

print('All tests passed!')
"
[RAW line 61 TOOL RESULT toolu_01U9HqHvGKt16My7UVrexyfQ]
Exit code 1
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "./swebench_9_15/testbed/src/flask/__init__.py", line 7, in <module>
    from .app import Flask as Flask
  File "./swebench_9_15/testbed/src/flask/app.py", line 28, in <module>
    from . import cli
  File "./swebench_9_15/testbed/src/flask/cli.py", line 18, in <module>
    from .helpers import get_debug_flag
  File "./swebench_9_15/testbed/src/flask/helpers.py", line 15, in <module>
    from werkzeug.urls import url_quote
ImportError: cannot import name 'url_quote' from 'werkzeug.urls' (/opt/anaconda3/lib/python3.8/site-packages/werkzeug/urls.py)
[RAW line 63 TOOL Bash]
python3 -c "
import sys
sys.path.insert(0, 'testbed/src')

# Just test the validation logic directly
name = 'admin.users'
if '.' in name:
    print('PASS: Validation logic correctly detects dot in name')
else:
    print('FAIL: Validation logic failed')
    sys.exit(1)

name = 'admin_users'
if '.' in name:
    print('FAIL: Validation logic false positive')
    sys.exit(1)
else:
    print('PASS: Validation logic correctly allows valid name')

print('Logic validation passed!')
"
[RAW line 64 TOOL RESULT toolu_01XiCwY9cgZnBqerreSRZc1Y]
PASS: Validation logic correctly detects dot in name
PASS: Validation logic correctly allows valid name
Logic validation passed!
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
[RAW line 66 TOOL Read]
{
  "file_path": "./swebench_9_15/testbed/src/flask/blueprints.py",
  "limit": 10,
  "offset": 185
}
[RAW line 67 TOOL RESULT toolu_01E4StedgCQ3JV2BF6XTKDM4]
   185→            import_name=import_name,
   186→            static_folder=static_folder,
   187→            static_url_path=static_url_path,
   188→            template_folder=template_folder,
   189→            root_path=root_path,
   190→        )
   191→        if "." in name:
   192→            raise ValueError("Blueprint name should not contain dots")
   193→        self.name = name
   194→        self.url_prefix = url_prefix
